stderr
Hiker.java:7: error: cannot find symbol
        List<String> list = new Arraylist<String>();
                                ^
  symbol:   class Arraylist
  location: class Hiker
1 error
